<resources>
    <string name="app_name">HTA</string>
    <string name="logo_content">Logo image</string>
    <string name="login">Login</string>
    <string name="sign_in">Sign up</string>
    <string name="cows">Cows</string>
    <string name="livestrocks">Farms</string>
    <string name="home">Home</string>
    <string name="search">Search</string>
    <string name="report">Report</string>
    <string name="marked">Marked</string>
    <string name="help">Help</string>
    <string name="contact_us">Contact us</string>
    <string name="about_us">About us</string>
    <string name="show_more">Show more ></string>
    <string name="import_file">Import file</string>
    <string name="visits">Re-check list</string>
    <string name="factor">Invoice</string>
    <string name="injeries">Lesions</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="next_visits">Re-check list</string>
    <string name="next_visit">Next visit</string>
    <string name="no_next_visit">Nothing available</string>
    <string name="empty_livestrock_list">No farm</string>
    <string name="create_first_livestrock">Create your first farm</string>
    <string name="livestocks">Farms</string>
    <string name="cow_title">Cow </string>
    <string name="today">Today</string>
    <string name="enter_farm_name">Farm name</string>
    <string name="create_farm">Create farm</string>
    <string name="control_system">Housing system</string>
    <string name="birth_count">Herd size‌(Dairy cows)</string>
    <string name="empty_error">Empty input</string>
    <string name="check_fields">Check fields</string>
    <string name="not_found">Not found</string>
    <string name="cows_list">Cows list</string>
    <string name="submit">Submit</string>
    <string name="enter_farm">Select farm</string>
    <string name="enter_farm_search">Search by farm</string>
    <string name="enter_date">Search by date</string>
    <string name="enter_date_search">Search by date</string>
    <string name="enter_cow_number">Cow number</string>
    <string name="enter_cow_number_search">Search by cow</string>
    <string name="enter_cow_number_coma">Cow numbers: 12,3,…</string>
    <string name="cow_number">Cow number</string>
    <string name="enter_date_report">Date</string>
    <string name="enter_next_visit_date">Enter next visit date</string>
    <string name="enter_cow_number_report">Cow number</string>
    <string name="next">Next</string>
    <string name="information">Information</string>
    <string name="add_report">Add report</string>
    <string name="empty"> </string>
    <string name="count">Count</string>
    <string name="price">Price</string>
    <string name="total_price">Total price</string>
    <string name="sum">Sum</string>
    <string name="month_1">January</string>
    <string name="month_2">February</string>
    <string name="month_3">March</string>
    <string name="month_4">April</string>
    <string name="month_5">May</string>
    <string name="month_6">June</string>
    <string name="month_7">July</string>
    <string name="month_8">August</string>
    <string name="month_9">September</string>
    <string name="month_10">October</string>
    <string name="month_11">November</string>
    <string name="month_12">December</string>
    <string name="reason">Reason</string>
    <string name="my_previous">Previous</string>
    <string name="more_info_reason_1">Wound</string>
    <string name="more_info_reason_2">Point Hemorrhage</string>
    <string name="more_info_reason_3">Healed lesion</string>
    <string name="more_info_reason_4">No injuries</string>
    <string name="more_info_reason_5">Infectious lesion Treatment</string>
    <string name="more_info_reason_6">Block/shoe</string>
    <string name="more_info_reason_7">Hoof trimming</string>
    <string name="reason_1">120 DIM</string>
    <string name="reason_2">Dry-off</string>
    <string name="reason_3">Delayed repro</string>
    <string name="reason_4">New case</string>
    <string name="reason_5">Re-check</string>
    <string name="reason_6">High LS</string>
    <string name="reason_7">Lame cows</string>
    <string name="reason_8">Long toe</string>
    <string name="reason_9">Heifer</string>
    <string name="reason_10">Hoof trimming</string>
    <string name="reason_11">Other</string>
    <string name="more_info">More info</string>
    <string name="create">Create</string>
    <string name="more_info_text_add_report">In this part you should select at least on of options from Wound,Point Hemorrhage or Hoof trimming.</string>
    <string name="injury_area">Affected claw zone</string>
    <string name="select_farm">Select farm please</string>
    <string name="farm_list">Farms list</string>
    <string name="import_excel">Import your excel file</string>
    <string name="import_text">Import</string>
    <string name="select_cow">Select cow</string>
    <string name="export_factor">Invoice</string>
    <string name="add_new_cow_factor">Add new cow to factor</string>
    <string name="som_cut_price">Trimming cost</string>
    <string name="cure_price">Infectious lesion</string>
    <string name="temp_cure">Infectious lesion</string>
    <string name="bed_price">Hoof block</string>
    <string name="export_report">Export report</string>
    <string name="no_marked_cow">No marked cow!</string>
    <string name="no_marked_farm">No marked farm!</string>
    <string name="no_visit">There is no visit!</string>
    <string name="all_visits">All visits</string>
    <string name="visit_cow">Visit from cow</string>
    <string name="visit_cows">Visit from cows</string>
    <string name="toast_enter_cow_number">Cow number</string>
    <string name="toast_enter_date">Enter date</string>
    <string name="toast_select_one">Select one of options</string>
    <string name="toast_select_one_extra">Select one of options
    pay attention that you must select one of wound or point hemorrhage</string>
    <string name="toast_select_only_one">Select only one part</string>
    <string name="ok">OK</string>
    <string name="other_info">Treatment and severity</string>
    <string name="cow_reports">Cow reports</string>
    <string name="last_visit">Last visit</string>
    <string name="add_new_cow">Add new cow</string>
    <string name="no_visit_short">No visit</string>
    <string name="loading">Loading</string>
    <string name="offline">Offline</string>
    <string name="check_network">Check internet connection</string>
    <string name="try_again">Try again</string>
    <string name="notification_title">Re-check reminder</string>
    <string name="channel_name">Cow visit reminder</string>
    <string name="edit">Edit</string>
    <string name="remove">Remove</string>
    <string name="change_language">تغییر زبان به فارسی</string>
    <string name="export">Export</string>
    <string name="day">Day</string>
    <string name="month">Month</string>
    <string name="year">Year</string>
    <string name="zero">0</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="nine">9</string>
    <string name="ten">10</string>
    <string name="eleven">11</string>
    <string name="twelve">12</string>
    <string name="finger">Finger</string>
    <string name="injury_row_0">Interdigital necrobacillosis</string>
    <string name="injury_row_1">Digital dermatitis</string>
    <string name="injury_row_2">Sole ulcer</string>
    <string name="injury_row_3">White line disease</string>
    <string name="injury_row_4">Toe ulcer</string>
    <string name="injury_row_5">Heel erosion</string>
    <string name="injury_row_6">Vertical and horizontal fissure</string>
    <string name="injury_row_7">Zone 9</string>
    <string name="column_name_1">AVG operation in day</string>
    <string name="column_name_2">New case</string>
    <string name="column_name_3">Re-check</string>
    <string name="column_name_4">120 DIM</string>
    <string name="column_name_5">Dry-off</string>
    <string name="column_name_6">Delayed repro</string>
    <string name="column_name_7">Hoof trimming</string>
    <string name="column_name_8">Long toe</string>
    <string name="column_name_9">Hoof Trim</string>
    <string name="column_name_10">High LS</string>
    <string name="column_name_11">Heifer</string>
    <string name="column_name_12">Lame cows</string>
    <string name="column_name_13">Block/shoe</string>
    <string name="edit_profile">Edit profile</string>
    <string name="password">Password</string>
    <string name="old_password">Old password</string>
    <string name="new_password">New password</string>
    <string name="confirm_password">Confirm password</string>
    <string name="edit_password">Edit password</string>
    <string name="email">Email</string>
    <string name="username">Profile</string>
    <string name="save">Save</string>
    <string name="more_info_text_one">In the first field you should enter primary information of the cow like cow ID and date</string>
    <string name="more_info_three">In the third field, you can mark the affected zone in case of new lesions or re-checks and then fill the digit number.Choose "new case" or "re-check" to show if the lesion is new or not. Numbering the digits in this application starts from one for lateral right forelimb digit following a ‘S’ Pattern as the medial right forelimb (2), medial left forelimb (3), lateral left forelimb (4), lateral right hindlimb (5), medial right hindlimb (6), medial left hindlimb (7) and lateral left hindlimb (8)</string>
    <string name="forget_password">Forgot password?</string>
    <string name="forgot_password">Forgot password</string>
    <string name="reset_password">Request new password</string>
    <string name="reset_password_text">We send you an email that allows you to reset your password</string>
    <string name="enter_finger_number">Enter finger number</string>
    <string name="date_selection">Date selection</string>
    <string name="clear">Clear</string>
    <string name="finger_number">1~8</string>
    <string name="add_new_injury">Add new injury for this cow</string>
    <string name="cant_select">Can\'t select at same time</string>
    <string name="data_added">Data added successfully</string>
    <string name="tripel_error">Select at least one out of three options(Wound, Point Hemorrhage, Hoof trimming)</string>
    <string name="selection_error">Select at least one of options</string>
    <string name="no_connection">No internet conncetion</string>
    <string name="password_changed">Password changed</string>
    <string name="request_error">Request error</string>
    <string name="confirm_email">We send you an email that contains confirm link. to continue confirm that is your email. then click next. if you didn\'t get any email click resend button.</string>
    <string name="resend">Resend email</string>
    <string name="resended">We send you another email</string>
    <string name="forget_sended">We send your new password</string>
    <string name="not_confirmed">Your email is not confirmed</string>
    <string name="login_pls">You can login in app</string>
    <string name="password_hint">Password length must be greater than 8 character</string>
    <string name="out_of_date">Out of date application</string>
    <string name="please_update">Please update your application</string>
    <string name="update">Update</string>
</resources>