<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/Theme.App.MainConstraint.Login"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.login_fragments.SignUpFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:overScrollMode="never">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="5dp">

            <EditText
                android:id="@+id/user_name_input"
                style="@style/Theme.App.EditText.Login.Input"
                android:layout_width="match_parent"
                android:layout_height="@dimen/login_input_height"
                android:layout_margin="30dp"
                android:hint="@string/username"
                android:inputType="text"
                android:lines="1"
                android:singleLine="true"
                android:visibility="gone"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/email_input"
                style="@style/Theme.App.EditText.Login.Input"
                android:layout_width="match_parent"
                android:layout_height="@dimen/login_input_height"
                android:layout_marginLeft="30dp"
                android:layout_marginTop="15dp"
                android:layout_marginRight="30dp"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/user_name_input" />

            <EditText
                android:id="@+id/password_input"
                style="@style/Theme.App.EditText.Login.Input"
                android:layout_width="match_parent"
                android:layout_height="@dimen/login_input_height"
                android:layout_marginLeft="30dp"
                android:layout_marginTop="15dp"
                android:layout_marginRight="30dp"
                android:hint="@string/password"
                android:inputType="textPassword"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/email_input" />

            <TextView
                android:id="@+id/password_hint"
                style="@style/Theme.App.TextView.Body.TabView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:layout_marginTop="5dp"
                android:layout_marginRight="30dp"
                android:gravity="start|center_vertical"
                android:text="@string/password_hint"
                android:textColor="@color/hit_gray"
                app:layout_constraintBottom_toTopOf="@id/submit"
                app:layout_constraintEnd_toEndOf="@id/password_input"
                app:layout_constraintStart_toStartOf="@id/password_input"
                app:layout_constraintTop_toBottomOf="@id/password_input" />

            <Button
                android:id="@+id/submit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="72dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="72dp"
                android:layout_marginBottom="20dp"
                android:backgroundTint="@color/persian_green"
                android:elevation="8dp"
                android:fontFamily="@font/anjoman_bold"
                android:text="@string/sign_in"
                app:cornerRadius="15dp"
                android:textColor="@color/white"
                android:textSize="18sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/password_hint" />


        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>


</FrameLayout>