<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.ValidateActivity">

    <TextView
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/confirm_email"
        android:gravity="center"
        android:layout_marginTop="100dp"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:fontFamily="@font/anjoman_regular"
        android:textSize="18sp"
        />

    <Button
        android:id="@+id/resend"
        android:layout_width="match_parent"
        android:layout_height="@dimen/my_edit_text_height"
        android:layout_marginStart="72dp"
        android:layout_marginEnd="72dp"
        android:backgroundTint="@color/persian_green"
        android:fontFamily="@font/anjoman_bold"
        android:text="@string/resend"
        android:textColor="@color/white"
        android:textSize="18sp"
        app:cornerRadius="15dp"
        app:layout_constraintVertical_chainStyle="packed"
        android:layout_marginBottom="30dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toTopOf="@id/submit"
        app:layout_constraintTop_toBottomOf="@id/title" />

    <Button
        android:id="@+id/submit"
        android:layout_width="match_parent"
        android:layout_height="@dimen/my_edit_text_height"
        android:layout_marginStart="72dp"
        android:layout_marginEnd="72dp"
        android:backgroundTint="@color/persian_green"
        android:fontFamily="@font/anjoman_bold"
        android:text="@string/next"
        android:textColor="@color/white"
        android:textSize="18sp"
        app:cornerRadius="15dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/resend" />

</androidx.constraintlayout.widget.ConstraintLayout>