<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="300dp"
    android:layout_height="250dp"
    android:background="@drawable/dialoge_back">

    <ImageView
        android:id="@+id/dangerIcon"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_marginTop="25dp"
        android:src="@mipmap/danger"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="15dp"
        android:padding="5dp"
        app:layout_constraintBottom_toTopOf="@id/ok"
        app:layout_constraintTop_toBottomOf="@id/dangerIcon">


        <TextView
            android:id="@+id/reasenOfDialog"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/anjoman_medium"
            android:gravity="center"
            android:text="@string/out_of_date"
            android:textColor="@color/black"
            android:textSize="16sp"
            app:layout_constraintBottom_toTopOf="@+id/reasenOfDialogPartTwo"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/reasenOfDialogPartTwo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/anjoman_light"
            android:gravity="center"
            android:text="@string/please_update"
            android:textColor="@color/black"
            android:textSize="12sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@id/reasenOfDialog" />


    </androidx.constraintlayout.widget.ConstraintLayout>


    <Button
        android:id="@+id/ok"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@drawable/dialoge_btn_back"
        android:fontFamily="@font/anjoman_medium"
        android:text="@string/update"
        android:textColor="@color/white"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>